# odeint

./: .editorconfig  .gitignore  CMakeLists.txt  build.jam
.github/workflows/: ci.yml
examples/: CMakeLists.txt  Jamfile.v2  my_vector.cpp  stepper_details.cpp
examples/multiprecision/: CMakeLists.txt  Jamfile
meta/: libraries.json
performance/: Jamfile.v2
performance/SIMD/: perf_roessler.sh
test/: Jamfile.v2  adams_bashforth.cpp  adams_bashforth_moulton.cpp  adams_moulton.cpp  adaptive_iterator.cpp  adaptive_time_iterator.cpp  algebra_dispatcher.cpp  bulirsch_stoer.cpp  const_step_iterator.cpp  const_step_time_iterator.cpp  controlled_adams_bashforth_moulton.cpp  default_operations.cpp  diagnostic_state_type.hpp  dummy_observers.hpp  dummy_odes.hpp  dummy_steppers.hpp  euler_stepper.cpp  fusion_algebra.cpp  generation.cpp  generic_error_stepper.cpp  generic_stepper.cpp  implicit_euler.cpp  integrate.cpp  integrate_implicit.cpp  integrate_overflow.cpp  integrate_stepper_refs.cpp  integrate_times.cpp  integrators_symplectic.cpp  is_resizeable.cpp  multi_array.cpp  n_step_iterator.cpp  n_step_time_iterator.cpp  range_algebra.cpp  resize.cpp  resizing.cpp  resizing_test_state_type.hpp  rosenbrock4.cpp  rosenbrock4_mp.cpp  runge_kutta_concepts.cpp  runge_kutta_controlled_concepts.cpp  (+13 more)
test/numeric/: Jamfile.v2  abm_time_dependent.cpp  adams_bashforth.cpp  adams_bashforth_moulton.cpp  adaptive_adams_bashforth_moulton.cpp  order_quadrature_formula.cpp  rosenbrock.cpp  runge_kutta.cpp  velocity_verlet.cpp
test/regression/: Jamfile.v2  regression_147.cpp  regression_149.cpp  regression_168.cpp  regression_189.cpp
(+49 files in other folders)
