function(add_example name)
  cmake_parse_arguments(PARSE_ARGV 1 ARG "" "CXX_STANDARD;FOLDER" "")
  add_executable("${name}" "${name}.cpp")
  target_compile_definitions("${name}" PRIVATE "BOOST_ALL_NO_LIB=1")
  target_link_libraries("${name}" PRIVATE Boost::numeric_odeint)
  if(NOT ARG_FOLDER)
    set(ARG_FOLDER "Examples")
  endif()
  set_target_properties("${name}" PROPERTIES FOLDER "${ARG_FOLDER}")
  if(ARG_CXX_STANDARD)
    set_target_properties("${name}" PROPERTIES CXX_STANDARD "${ARG_CXX_STANDARD}")
  endif()
endfunction()

add_example(harmonic_oscillator)
add_example(solar_system)
add_example(chaotic_system)
add_example(stiff_system)
add_example(fpu)
add_example(phase_oscillator_ensemble)
if(NOT CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
  add_example(harmonic_oscillator_units)
endif()
add_example(stuart_landau)
add_example(two_dimensional_phase_lattice)
add_example(bulirsch_stoer)
add_example(elliptic_functions)
add_example(resizing_lattice)
add_example(list_lattice)
add_example(stepper_details)
add_example(my_vector)
add_example(lorenz)
add_example(lorenz_point)
add_example(van_der_pol_stiff)
add_example(simple1d)
add_example(stochastic_euler)
add_example(generation_functions)
add_example(heun)
add_example(bind_member_functions)
add_example(bind_member_functions_cpp11 CXX_STANDARD 14)
add_example(molecular_dynamics CXX_STANDARD 14)
add_example(molecular_dynamics_cells CXX_STANDARD 14)
add_example(abm_precision)
add_example(integrate_times)
add_example(find_crossing CXX_STANDARD 14)

add_subdirectory(multiprecision)
